--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "eslint src --fix && prettier src --write",
-    "build:swc":"nest start -b swc", 
+    "build:swc": "nest start -b swc",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -39,9 +39,11 @@
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "moment-timezone": "^0.5.48",
+    "nestjs-telegraf": "^2.9.1",
     "prisma": "^6.5.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "telegraf": "^4.16.3",
     "tsc-alias": "^1.8.13"
   },
   "devDependencies": {
