--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "express": "^5.1.0",
     "moment-timezone": "^0.5.48",
     "nestjs-telegraf": "^2.9.1",
+    "pdfkit": "^0.17.1",
+    "pdfmake": "^0.2.20",
     "prisma": "^6.5.0",
+    "puppeteer": "^24.12.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "telegraf": "^4.16.3",
@@ -58,6 +61,8 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
+    "@types/pdfkit": "^0.14.0",
+    "@types/pdfmake": "^0.2.11",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
