--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,8 @@ ACCESS_TOKEN_KEY=
 BOT_TOKEN=
 SELLING_CHANNEL_ID=
 PAYMENT_CHANNEL_ID=
+
+#old-service
+OLD_SERVICE_BASE_URL=
+OLD_SERVICE_USER=
+OLD_SERVICE_PASS=
