--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/schedule": "^5.0.1",
     "@nestjs/swagger": "^11.1.0",
     "@prisma/client": "^6.5.0",
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
