--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "telegraf": "^4.16.3",
-    "tsc-alias": "^1.8.13"
+    "tsc-alias": "^1.8.13",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
