--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dotenv": "^16.5.0",
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
+    "https": "^1.0.0",
     "moment-timezone": "^0.5.48",
     "nestjs-telegraf": "^2.9.1",
     "p-limit": "^3.1.0",
