--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express": "^5.1.0",
     "https": "^1.0.0",
     "moment-timezone": "^0.5.48",
+    "multer": "^2.0.2",
     "nestjs-telegraf": "^2.9.1",
     "p-limit": "^3.1.0",
     "pdfkit": "^0.17.1",
@@ -53,7 +54,8 @@
     "rxjs": "^7.8.1",
     "telegraf": "^4.16.3",
     "tsc-alias": "^1.8.13",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -65,8 +67,9 @@
     "@swc/core": "^1.11.21",
     "@types/bcrypt": "^5.0.2",
     "@types/compression": "^1.8.1",
-    "@types/express": "^5.0.0",
+    "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/pdfkit": "^0.14.0",
     "@types/pdfmake": "^0.2.11",
